Modified update photo caption endpoint to include tags
- Started modifying updatePhotoDetails method to store and return captions and tags
- Modified setPhotoCaption route to updatePhotoDetails as the endpoint now handles tag information
- Updated API spec to display tag information in request and response bodies

#story[538] #implement #document #pair[mla138, osh17]
