# app/controllers/backend/PhotoController.java
@@ -3,7 +3,9 @@ package controllers.backend;
 import actions.ActionState;
 import actions.Authenticator;
 import actions.roles.Everyone;
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.google.inject.Inject;
 import java.awt.Color;
 import java.awt.Graphics2D;
@@ -20,6 +22,7 @@ import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
 import javax.imageio.ImageIO;
@@ -94,19 +97,22 @@ public class PhotoController extends TEABackController {
 
     /**
      * Sets a photo caption
+     * //TODO
      * @param request
      * @param photoId
      * @return
      */
     @With({Everyone.class, Authenticator.class})
-    public CompletableFuture<Result> setPhotoCaption(Http.Request request, Long photoId) {
+    public CompletableFuture<Result> updatePhotoDetails(Http.Request request, Long photoId) {
         User user = request.attrs().get(ActionState.USER);
         Long currentUserId = user.id;
 
         // Check if body correctly deserializes to a json string, otherwise throw 400
-        String newCaption;
+        Photo newPhotoDetails;
         try {
-            newCaption = Json.fromJson(request.body().asJson(), String.class);
+//            newCaption = Json.fromJson(request.body().asJson(), String.class);
+//            newTags = new HashSet<Tag>(Arrays.asList(mapper.readValue(son.fromJson(request.body().asJson().get("tags"), Person[].class)););
+            newPhotoDetails = Json.fromJson(request.body().asJson(), Photo.class);
         } catch (Exception e) {
             return CompletableFuture.supplyAsync(Results::badRequest);
         }
@@ -121,11 +127,16 @@ public class PhotoController extends TEABackController {
             }
 
             // Store the old caption, update to new caption and save
-            String oldCaption = photo.caption;
-            photo.caption = newCaption;
+            ObjectNode oldData = Json.newObject();
+            oldData.put("caption", photo.caption);
+            oldData.putArray("tags").addAll(new ObjectMapper().valueToTree(new ArrayList<>(photo.tags)));
+
+
+            photo.caption = newPhotoDetails.caption;
+            photo.tags = newPhotoDetails.tags;
             photoRepository.updatePhoto(photo);
 
-            return ok(Json.toJson(oldCaption));
+            return ok(oldData);
         });
     }
 
@@ -238,10 +249,10 @@ public class PhotoController extends TEABackController {
         String[] photoCaptions =
             (formKeys.get("caption") == null) ? new String[]{""} : formKeys.get("caption");
         
-        List<Tag> photoTags;
+        Set<Tag> photoTags;
         try {
             final String tagString = formKeys.getOrDefault("tags", new String[]{"[]"})[0];
-            photoTags = new ArrayList<>(Arrays.asList(
+            photoTags = new HashSet<>(Arrays.asList(
                 Json.fromJson(new ObjectMapper().readTree(tagString), Tag[].class)));
         } catch (IOException e) {
             return CompletableFuture
@@ -355,7 +366,7 @@ public class PhotoController extends TEABackController {
      */
     private Photo readFileToPhoto(Http.MultipartFormData.FilePart<Files.TemporaryFile> file,
         HashSet<String> publicPhotoFileNames, long userId,
-        boolean isTest, String caption, List<Tag> tags) throws IOException {
+        boolean isTest, String caption, Set<Tag> tags) throws IOException {
         // Get the filename, file size and content-type of the file
         int randomNumber = (int)(Math.random() * 496148154 + 1);
         String[] filenameParts = file.getFilename().split("\\.");
@@ -644,7 +655,7 @@ public class PhotoController extends TEABackController {
                 controllers.backend.routes.javascript.PhotoController.getDestinationPhotos(),
                 controllers.backend.routes.javascript.PhotoController.makePhotoProfile(),
                 controllers.backend.routes.javascript.PhotoController.setCoverPhoto(),
-                controllers.backend.routes.javascript.PhotoController.setPhotoCaption(),
+                controllers.backend.routes.javascript.PhotoController.updatePhotoDetails(),
                 controllers.backend.routes.javascript.PhotoController.getPhotoById()
             )
         ).as(Http.MimeTypes.JAVASCRIPT);
