# travelea-api-spec.yaml
@@ -1190,7 +1190,7 @@ paths:
         schema:
           type: string
       - in: path
-        name: id
+        name: photoId
         required: true
         description: The user ID to update profile photo of
         schema:
@@ -1234,7 +1234,7 @@ paths:
         schema:
           type: string
       - in: path
-        name: id
+        name: photoId
         required: true
         description: The user ID to update cover photo of
         schema:
@@ -1278,7 +1278,7 @@ paths:
         schema:
           type: string
       - in: path
-        name: id
+        name: photoId
         required: true
         description: The ID of the photo being toggled
         schema:
@@ -1419,6 +1419,42 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Photo'
+        '403':
+          description: 'Forbidden'
+        '404':
+          description: 'Photo not found'
+
+    put:
+      tags:
+      - Photos
+      summary: 'Updates the caption and tags associated with a photo'
+      security:
+      - UserToken: []
+      parameters:
+      - in: header
+        name: JWT-Auth
+        required: true
+        description: Authentication cookie.
+        schema:
+          type: string
+      - in: path
+        name: photoId
+        required: true
+        description: The ID of the photo to retrieve
+        schema:
+          type: integer
+          minimum: 1
+      requestBody:
+        $ref: '#/components/requestBodies/putPhotoDetails'
+      responses:
+        '200':
+          description: 'Successfully updated photo details'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UpdatePhotoDetails'
+        '400':
+          description: 'Bad Request'
         '403':
           description: 'Forbidden'
         '404':
@@ -1770,6 +1806,21 @@ components:
                 description: Date when treasure hunt ends
       description: Treasure hunt object to insert into database.
 
+    putPhotoDetails:
+      content:
+        application/json:
+          schema:
+            type: object
+            description: ""
+            properties:
+              caption:
+                type: string
+                example: 'A picture of the Eiffel tower, taken from Berlin with a really big camera lens'
+              tags:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Tag'
+
 
 
   schemas:
@@ -2029,6 +2080,18 @@ components:
           format: ISO date-time
           example: '2019-04-01T23:26:00.000'
 
+    UpdatePhotoDetails:
+      type: object
+      description: ""
+      properties:
+        caption:
+          type: string
+          example: 'A picture of the Eiffel tower, taken from Berlin with a really big camera lens'
+        tags:
+          type: array
+          items:
+            $ref: '#/components/schemas/Tag'
+
     TreasureHunt:
       type: object
       required:
@@ -2065,6 +2128,18 @@ components:
           type: string
           format: date yyyy/mm/dd
           example: '2019-07-12'
+
+    Tag:
+      type: object
+      required:
+      - name
+      properties:
+        id:
+          type: integer
+          minimum: 1
+          example: 1
+        name:
+          type: string
 
     BinaryImageFile:
       type: string
